--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -607,19 +607,24 @@ width: 50%;
     position: fixed;
     bottom:0;
     right: 0;
-    margin:10px;
+    margin:30px;
+    margin-right: 50px;
+}
+.iteminfo div{
+    text-align: center;
+    max-width: 150px;
 }
 .itemexists{
     background-color: var(--blue);
     border-radius: 5px;
-    box-shadow: 4px 4px 1px crimson;
+    box-shadow: 6px 6px 0px crimson;
     margin-bottom:10px;
     padding:20px;
 }
 .itemadded{
     background-color: var(--blue);
     border-radius: 5px;
-    box-shadow: 4px 4px 1px var(--greenlight);
+    box-shadow: 6px 6px 0px var(--greenlight);
     margin-bottom:10px;
     padding:20px;
 }
