--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -42,6 +42,11 @@ input:focus{
     box-shadow:2px 2px 2px 2px var(--dblue);
     background-color: var(--blue);
 }
+.friends
+{
+    background-color: var(--dblue);
+    color:white;
+}
 .mainmenu{
 position: fixed;
 right: 0;
