--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -10,7 +10,7 @@
 }
 *
 {
-font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-family:Arial, Helvetica, sans-serif;
 padding:0;
 margin:0;
 }
@@ -188,6 +188,7 @@ display:block;
 }
 .chat-msg-box
 {
+    font-size: 14px;
 overflow-y: scroll;
 border-radius: 5px;
 height: 240px;
@@ -216,8 +217,14 @@ background-color: var(--blue2);
 border-radius: 5px;
 background-color: var(--blue);
 }
-
-
+.fromsender
+{
+background-color: goldenrod;
+}
+.fromreceiver
+{
+    background-color: var(--greenlight);
+}
 .mainmenu{
 transform:translateY(25%);
 right:0;
