--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -8,6 +8,20 @@
 --greenlight:rgb(0, 255, 0);
 --lowgreen:rgb(198, 255, 198);
 }
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: var(--bblue);
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--blue);
+  }
 *
 {
 font-family:Arial, Helvetica, sans-serif;
@@ -171,19 +185,18 @@ height:auto;
 .chat-box-div
 {
 display:none;
-transform: translateY(50%);
 z-index: 1;
 justify-content: center;
-right: 0;
-left:0;
-position:absolute;
+right: 5%;
+bottom:0;
+position:fixed;
 }
 .chat-box-container
 {
 border-radius: 5px;
 border:2px solid black;
 padding:10px;
-width: 50%;
+width: 300px;
 background-color: var(--dblue);
 display:block;
 }
@@ -192,7 +205,7 @@ display:block;
     font-size: 14px;
 overflow-y: scroll;
 border-radius: 5px;
-height: 240px;
+height: 350px;
 background-color: white;
 }
 .chat-msg-box ol{
@@ -207,7 +220,6 @@ background-color: white;
 {   
     transform: translateX(60%);
     width: 60%;
-    right:0;
     margin-top:5px;
     background-color:var(--bblue);
 }
