--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -63,14 +63,14 @@ button:hover{
     display: flex;
     justify-content: center;
 }
-.topmenu li{display:inline;}
-.topmenu a{
+.topmenu li{
+    display:inline;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     transition: .3s;
     width: calc(100%/4);
     display: inline;
 }
-.topmenu a:hover{
+.topmenu li:hover{
     transition: .1s;
     cursor:pointer;
     filter: drop-shadow(2px 2px 2px var(--dblue));
