--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -300,6 +300,8 @@ box-shadow:0px 2px 2px gray;
 color: var(--dblue);
 cursor: pointer;
 background-color: var(--blue);
+box-shadow: 0 0 white, inset 400px 0 white;
+transition: ease-in .5s;
 }
 .form-signup
 {
