--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -233,9 +233,10 @@ position:absolute;
 }
 .chat-box-container
 {
+    position: relative;
 border-radius: 5px;
 border:2px solid black;
-padding:10px;
+padding:2px;
 width: 300px;
 background-color: var(--dblue);
 display:block;
