--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -11,41 +11,66 @@
     padding:0;
     margin:0;
 }
-.mainbox{
-background-color: var(--bblue);
+.mainbox
+{
+height: 100vh;
+width: 100%;
+position: fixed;
+display: flex;
+justify-content: center;
+align-items: center;
 }
-.draggable{
-  padding:50px;
-  position: fixed;
-  background-color: crimson;
-  z-index: 1;
+.container
+{
+position: fixed;
+display: flex;
+justify-content: center;
+
+
 }
-.drophere{
-  transition: .5s;
-  padding:120px;
-  position: fixed;
-  right: 20px;
-  top:20px;
+.container div
+{
+  background-color: var(--bblue);
+  padding:20px;
+  display:none;
+  transition: .5s !important;
+  margin:6px;
+  border:1px solid black;
+}
+.shown{
+  background-color: var(--blue) !important;
+  transform:scale(1.2) !important;
+  transition: 0.5s !important;
+  display:block !important;
+}
+.prev
+{
+transition: 0.5s;
+display:block !important;
+opacity: 0.5;
+}
+.next
+{
+  transition: 0.5s;
+display:block !important;
+opacity: 0.5;
+}
+a
+{
+  position: relative;
+  margin:20px;
+  margin-top: 120px;
+  padding:5px;
   background-color: var(--dblue);
 }
-.active{
-transition:.5s;
-background: var(--blue2);
+button
+{
+  padding:10px;
+  background-color: var(--blue);
+  margin-top:155px;
 }
-.hover{
-transition:.5s;
-background: var(--blue);
-}
-.dropped{
-transition:.5s;
-background-color: var(--greenlight);
-}
-.deck1{
-  position: fixed;
-  bottom:0;
-  display: flex;
+button:hover
+{
   background-color: var(--bblue);
-  width: 100px;
-  height: 30px;
-  border:2px var(--dblue) solid;
+  cursor: pointer;
 }
