--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -1,15 +1,16 @@
 :root {
-    --dblue: #38435E;
-    --blue: #84A0DF;
-    --bblue:#CAD2E3;
-    --blue2:#657AAB;
-    --grey:#54575E;
-    --greenlight:rgb(0, 255, 0);
-    --lowgreen:rgb(198, 255, 198);
-  }
+--dblue: #38435E;
+--blue: #84A0DF;
+--bblue:#CAD2E3;
+--blue2:#657AAB;
+--grey:#54575E;
+--greenlight:rgb(0, 255, 0);
+--lowgreen:rgb(198, 255, 198);
+}
 *{
-    padding:0;
-    margin:0;
+  user-select: none;
+padding:0;
+margin:0;
 }
 body{
 }
@@ -28,7 +29,7 @@ margin:0;
 }
 .wrapper
 {
-  
+
 height: 100vh;
 width: 100%;
 position: fixed;
@@ -41,42 +42,57 @@ align-items: center;
 z-index: 1;
 position: fixed;
 display: flex;
-justify-content: center;
 align-self: center;
+justify-content: space-between;
+width: 100%;
 }
 .container div
 {
-  background-color: var(--bblue);
-  display:none;
-  transition: .5s !important;
-  border:1px solid black;
-
+justify-content: space-between;
+background-color: transparent !important;
+transition: .5s !important;
 }
 .container img
 {
-float: left;
-width: 150px;
-height: 250px;
+width: 100px;
+height: 200px;
 border:2px solid crimson;
-box-shadow: 0px 0px 10px 2px crimson;
+box-shadow: 0px 0px 20px 6px crimson;
 object-fit: cover;
+float:left;
+}
+.container img:hover
+{
+cursor: pointer;
 }
 .shown{
-  background-color: var(--blue) !important;
-  transform:scale(1.5) !important;
-  transition: 0.3s !important;
-  display:block !important;
-  z-index: 1;
+background-color: var(--blue) !important;
+transform:scale(1.3) !important;
+transition: 0.3s !important;
+display:flex !important;
+z-index: 1;
 }
 .prev
 {
 transition: 0.3s;
-display:block !important;
-opacity: 0.6;
+display:flex !important;
+opacity: 0.5;
 }
 .next
 {
 transition: 0.3s;
-display:block !important;
-opacity: 0.6;
+display:flex !important;
+opacity: 0.5;
+}
+@keyframes shaker {
+0%{transform:rotate(4deg)}
+20%{transform:rotate(-4deg)}
+40%{transform:rotate(4deg)}
+60%{transform:rotate(-4deg)}
+80%{transform:rotate(4deg)}
+100%{transform:rotate(-4deg)}
+}
+.container img:hover
+{
+animation: shaker 0.8s;
 }
