--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -257,6 +257,11 @@ background-color: white;
     border-radius: 5px;
     padding:10px;
     margin-top:4px;
+   
+}
+.chat-msg-box p
+{
+word-break: break-all;
 }
 .sender
 {   
