--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -8,7 +8,7 @@
 --lowgreen:rgb(198, 255, 198);
 }
 *{
-  user-select: none;
+user-select: none;
 padding:0;
 margin:0;
 }
@@ -20,79 +20,97 @@ background-repeat: no-repeat !important;
 background-size:cover !important;
 background-position:center !important;
 z-index: -2;
-opacity: 0.3;
-height: 100vh;
+opacity: 0.6;
+height: 100%;
 width: 100%;
 position: fixed;
 align-items: center;
-margin:0;
+display: flex;
 }
-.wrapper
+.showbox
 {
-
-height: 100vh;
+height: 100%;
 width: 100%;
 position: fixed;
 display: flex;
 justify-content: center;
 align-items: center;
 }
-.container
+.wrapper
 {
-z-index: 1;
+height: 100%;
+width: 100%;
 position: fixed;
 display: flex;
-align-self: center;
-justify-content: space-between;
+justify-content: space-evenly;
+align-items: center;
+}
+.wrapper img
+{
 width: 100%;
+height: auto;
+}
+.container
+{
+top:10px;
+width: 100%;
+position: fixed;
+z-index: 1;
+display: flex;
+justify-content: space-evenly;
 }
 .container div
 {
-justify-content: space-between;
 background-color: transparent !important;
 transition: .5s !important;
+display: block !important;
+display: flex;
+justify-content: center;
 }
 .container img
 {
 width: 100px;
 height: 200px;
 border:2px solid crimson;
-box-shadow: 0px 0px 20px 6px crimson;
+box-shadow: 0px 0px 8px 4px crimson;
 object-fit: cover;
-float:left;
+}
+.container h3
+{
+display:none;
+position: fixed;
+margin:0 auto;
+left:0;
+right:0;
+text-align: center;
 }
 .container img:hover
 {
+transition: 0.3s !important;
 cursor: pointer;
+opacity: 1;
+animation: shaker 0.4s;
 }
 .shown{
 background-color: var(--blue) !important;
-transform:scale(1.3) !important;
 transition: 0.3s !important;
 display:flex !important;
-z-index: 1;
+z-index: 1;transform:scale(1.1);
 }
-.prev
-{
-transition: 0.3s;
-display:flex !important;
-opacity: 0.5;
+@font-face {
+font-family: handwrite;
+src: url(IslandMoments-Regular.ttf);
 }
-.next
+.shown h3
 {
-transition: 0.3s;
-display:flex !important;
-opacity: 0.5;
+font-family:handwrite;
+font-size:50px;
 }
 @keyframes shaker {
-0%{transform:rotate(4deg)}
-20%{transform:rotate(-4deg)}
-40%{transform:rotate(4deg)}
-60%{transform:rotate(-4deg)}
-80%{transform:rotate(4deg)}
-100%{transform:rotate(-4deg)}
-}
-.container img:hover
-{
-animation: shaker 0.8s;
+0%{transform:rotate(0)}
+20%{transform:rotate(-2deg)}
+40%{transform:rotate(2deg)}
+60%{transform:rotate(-2deg)}
+80%{transform:rotate(2deg)}
+100%{transform:rotate(0)}
 }
