--- a/poket/css/style.css
+++ b/poket/css/style.css
@@ -556,6 +556,24 @@ box-shadow:0px 6px 8px 2px var(--grey);
 background-color: var(--blue2);
 box-shadow:0px 6px 8px 2px var(--grey);
 }
+.timedlogout
+{   
+    background-color: red;
+    padding:50px;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.closesession
+{
+    background-color: red;
+    padding:50px;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .backcurtain
 {
 display:none;
