--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -11,6 +11,7 @@
 user-select: none;
 padding:0;
 margin:0;
+box-sizing: border-box;
 }
 body{
 }
@@ -19,11 +20,12 @@ body{
 background-repeat: no-repeat !important;
 background-size:cover !important;
 background-position:center !important;
+background-color: grey;
 z-index: -2;
 opacity: 0.6;
 height: 100%;
 width: 100%;
-position: fixed;
+position: absolute;
 align-items: center;
 display: flex;
 }
@@ -31,7 +33,7 @@ display: flex;
 {
 height: 100%;
 width: 100%;
-position: fixed;
+position: absolute;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -40,9 +42,9 @@ align-items: center;
 {
 height: 100%;
 width: 100%;
-position: fixed;
+position: absolute;
 display: flex;
-justify-content: space-evenly;
+flex-direction: column;
 align-items: center;
 }
 .wrapper img
@@ -52,33 +54,25 @@ height: auto;
 }
 .container
 {
-top:10px;
-width: 100%;
-position: fixed;
+width: 80%;
 z-index: 1;
 display: flex;
 justify-content: space-evenly;
 }
-.container div
-{
-background-color: transparent !important;
-transition: .5s !important;
-display: block !important;
-display: flex;
-justify-content: center;
-}
 .container img
-{
-width: 100px;
+{  
+max-width: 100%;
+max-width: 100%;
 height: 200px;
+width: 100px;
 border:2px solid crimson;
-box-shadow: 0px 0px 8px 4px crimson;
+box-shadow: 0px 0px 4px 2px crimson;
 object-fit: cover;
 }
 .container h3
 {
 display:none;
-position: fixed;
+position: absolute;
 margin:0 auto;
 left:0;
 right:0;
@@ -91,6 +85,20 @@ cursor: pointer;
 opacity: 1;
 animation: shaker 0.4s;
 }
+
+.titleimg
+{
+    animation-name: none !important;
+    width: 80% !important;
+    opacity: 1;
+    overflow-y: auto;
+    position: absolute;
+}
+.titleimg:hover
+{
+    opacity: 0.6 !important;
+} 
+
 .shown{
 background-color: var(--blue) !important;
 transition: 0.3s !important;
