--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -58,12 +58,14 @@ width: 80%;
 z-index: 1;
 display: flex;
 justify-content: space-evenly;
+margin-top: 15px;
+
 }
 .container img
 {  
 max-width: 100%;
 max-width: 100%;
-height: 200px;
+height: 196px;
 width: 100px;
 border:2px solid crimson;
 box-shadow: 0px 0px 4px 2px crimson;
@@ -88,7 +90,7 @@ animation: shaker 0.4s;
 
 .titleimg
 {
-    animation-name: none !important;
+    animation-name: none !important;    
     width: 80% !important;
     opacity: 1;
     overflow-y: auto;
@@ -98,7 +100,12 @@ animation: shaker 0.4s;
 {
     opacity: 0.6 !important;
 } 
+.title
+{
+    position: fixed;
+    bottom:0;
 
+}
 .shown{
 background-color: var(--blue) !important;
 transition: 0.3s !important;
@@ -109,7 +116,7 @@ z-index: 1;transform:scale(1.1);
 font-family: handwrite;
 src: url(IslandMoments-Regular.ttf);
 }
-.shown h3
+h3
 {
 font-family:handwrite;
 font-size:50px;
