--- a/tempjs/style.css
+++ b/tempjs/style.css
@@ -8,6 +8,7 @@
 --lowgreen:rgb(198, 255, 198);
 }
 *{
+    border-radius: 15px;
 user-select: none;
 padding:0;
 margin:0;
@@ -47,6 +48,7 @@ position: absolute;
 display: flex;
 flex-direction: column;
 align-items: center;
+
 }
 .wrapper img
 {
@@ -59,16 +61,17 @@ width: 80%;
 z-index: 1;
 display: flex;
 justify-content: space-evenly;
-margin-top: 15px;
-
+margin-top: 25px;
 }
 .container img
 {  
-max-width: 100%;
-max-width: 100%;
-height: 196px;
-width: 100px;
-object-fit: cover;
+    max-width: 100%;
+    max-width: 100%;
+    height: 196px;
+    width: 100px;
+    z-index: 0;
+    object-fit: cover;
+    background-color: transparent;
 }
 .container h3
 {
@@ -79,6 +82,10 @@ left:0;
 right:0;
 text-align: center;
 }
+.container div
+{
+background-color: transparent;
+}
 .container img:hover
 {
 transition: 0.3s !important;
@@ -86,7 +93,6 @@ cursor: pointer;
 opacity: 1;
 animation: shaker 0.4s;
 }
-
 .titleimg
 {
     animation-name: none !important;    
@@ -116,20 +122,37 @@ animation: shaker 0.4s;
 
 }
 .shown{
-background-color: var(--blue) !important;
 transition: 0.3s !important;
 display:flex !important;
 z-index: 1;
 transform:scale(1.1);
+margin-left:2%;
+margin-right:2%;
+}
+@keyframes roundabout {
+    0%{box-shadow:0 0 1px 1px var(--dblue);}
+    25%{box-shadow:0 0 6px 6px var(--dblue);}
+    50%{box-shadow:0 0 1px 1px var(--dblue);}
+    75%{box-shadow:0 0 6px 6px var(--dblue);}
+    100%{box-shadow:0 0 1px 1px var(--dblue);}
+}
+.shown img{
+    animation:roundabout infinite 1s linear !important;
 }
 @font-face {
 font-family: handwrite;
 src: url(IslandMoments-Regular.ttf);
 }
+.footer
+{
+    position: fixed;
+    bottom: 0;
+    filter:drop-shadow(4px 4px 0px var(--dblue));
+}
 h3
 {
 font-family:handwrite;
-font-size:50px;
+font-size:100px;
 }
 @keyframes shaker {
 0%{transform:rotate(0)}
