--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -62,6 +62,8 @@ button:hover{
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding:1px;
 }
 .topmenu li{
     display:inline;
@@ -71,17 +73,17 @@ button:hover{
     display: inline;
 }
 .topmenu li:hover{
-    transition: .1s;
+    transition: .3s;
     cursor:pointer;
-    filter: drop-shadow(2px 2px 2px var(--dblue));
+    box-shadow: 0 0 8px 4px var(--dblue);
 }
 .topmenu img{
     width: 50px;
     height: auto;
 }
 .topmenuselected{
-    transition: .3s;
-    background-color:var(--dblue);
+    transition: .3s !important;
+    box-shadow:inset 0 0 8px 4px var(--dblue) !important;
 }
 .reg-div{
     position:fixed;
