--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -45,7 +45,7 @@ button:hover{
     z-index: 0;
     text-align: center;
     width: 100%;
-    position: fixed;
+    position: absolute;
     top:0;
 }
 .shopmenu{
@@ -85,8 +85,16 @@ button:hover{
     transition: .3s !important;
     box-shadow:inset 0 0 8px 4px var(--dblue) !important;
 }
+.main-content
+{   
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .reg-div{
-    position:fixed;
+    position:absolute;
     display:none;
     z-index: 1;
 }
@@ -97,7 +105,7 @@ button:hover{
     width: 100%;
 }
 .reg-container{
-    position:fixed;
+    position:absolute;
     margin:0 auto;
     left:0;right:0;
     margin-top:50px;
@@ -161,24 +169,26 @@ button:hover{
 .login-div{
     display:none;
     z-index: 1;
-    margin:0 auto;
-    left:0;right:0;
-    position: fixed;
+    align-items: center;
+    justify-content: center;
+    width: 75%;
 }
 .login-container{
-    position:fixed;
-    margin:0 auto;
-    left:0;right:0;
-    margin-top:50px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     border-radius:5px;
-    width: 50%;
     max-width: 450px;
+    min-width: 300px;
     border:2px solid var(--blue);
     background-color: var(--bblue);
     z-index: 1;
-    min-width: 200px !important;
     box-shadow: 5px 5px 50px black;
 
+}
+.login-container div
+{
+    width: 100%;
 }
 .login-container ol{
     margin:15px;
@@ -231,43 +241,24 @@ button:hover{
     animation-direction:alternate;
     animation-timing-function:ease-in-out;
 }
-@keyframes green-blink-btn {
-        5%{background:linear-gradient(to right, var(--greenlight) 0%, var(--blue) 10%);}
-        10%{background:linear-gradient(to right, var(--greenlight) 5%, var(--blue) 15%);}
-        20%{background:linear-gradient(to right, var(--greenlight) 10%, var(--blue) 20%);}
-        25%{background:linear-gradient(to right, var(--greenlight) 15%, var(--blue) 25%);}
-        30%{background:linear-gradient(to right, var(--greenlight) 20%, var(--blue) 30%);}
-        35%{background:linear-gradient(to right, var(--greenlight) 25%, var(--blue) 35%);}
-        40%{background:linear-gradient(to right, var(--greenlight) 30%, var(--blue) 40%);}
-        45%{background:linear-gradient(to right, var(--greenlight) 35%, var(--blue) 45%);}
-        50%{background:linear-gradient(to right, var(--greenlight) 40%, var(--blue) 50%);}
-        55%{background:linear-gradient(to right, var(--greenlight) 45%, var(--blue) 55%);}
-        60%{background:linear-gradient(to right, var(--greenlight) 50%, var(--blue) 60%);}
-        65%{background:linear-gradient(to right, var(--greenlight) 55%, var(--blue) 65%);}
-        75%{background:linear-gradient(to right, var(--greenlight) 65%, var(--blue) 75%);}
-        70%{background:linear-gradient(to right, var(--greenlight) 60%, var(--blue) 70%);}
-        80%{background:linear-gradient(to right, var(--greenlight) 70%, var(--blue) 80%);}
-        85%{background:linear-gradient(to right, var(--greenlight) 75%, var(--blue) 85%);}
-        90%{background:linear-gradient(to right, var(--greenlight) 80%, var(--blue) 90%);}
-        100%{background-color:var(--greenlight);}
-        }
+
 .login-btn-correct{
     box-shadow: 0 0 white, inset 80px 0 var(--lowgreen);
 }
 .user-div{
     display:none;
+    justify-content: center;
+    align-items: center;
 }
 .user-container{
-    position: fixed;
+    justify-content: center;
+    align-items: center;
     border-radius:5px;
     width: 80%;
     border:2px solid var(--blue);
     background-color: var(--bblue);
     min-width: 200px !important;
     z-index: 1;
-    margin:0 auto;
-    left: 0;
-    right: 0;
 }
 .user-container ol{
     margin:15px;
@@ -344,23 +335,24 @@ background-color: var(--blue);
 
 .shop-div{
     display:flex;
-    margin-top:180px;
+    align-items: center;
     justify-content: center;
 }
 .shop-container{
-    width: 100%;
+    width: 90%;
+    background-color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .shop-container table{
+    min-height: 320px;
+    margin:10px;
     text-align: center;
-    margin:0 auto;
-    width: 80%;
-    height: 100%;
     border-spacing: 0 10px;
-}
-.shop-container tbody{
-    left:0;
-    right: 0;
-    margin:0 auto;
+    justify-content: center;
 }
 .shop-container tr{
     background-color: var(--bblue);
@@ -373,6 +365,17 @@ background-color: var(--blue);
     width: calc(100%/6);
     border-bottom:1px solid var(--blue);
 }
+.shop-container td:nth-child(1)
+{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.shop-container td:nth-child(4)
+{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
 .shop-container img{
     width: auto;
     height: 50px;
@@ -381,13 +384,13 @@ background-color: var(--blue);
 .nav{
     display: flex;
     justify-content: center;
-    margin-top:10px;
 }
 .shop-container a{
     display: inline;
     padding:8px;
     border-radius: 5px;
     margin:10px;
+    margin-top: 0;
     cursor: pointer;
     background-color: var(--blue2);
 }
@@ -402,7 +405,7 @@ background-color: var(--blue);
     display: none;
 }
 .itempage-container{
-    position: fixed;
+    position: absolute;
     border-radius:5px;
     width: 80%;
     border:2px solid var(--blue);
@@ -472,9 +475,12 @@ background-color: var(--blue);
 }
 .cart-div{
     display:none;
-    margin-top:80px;
+    justify-content: center;
+    align-items: center;
+    width: 90% !important;
 }
 .cart-container{
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -486,7 +492,6 @@ background-color: var(--blue);
 .cart-container table{
     text-align: center;
     border-spacing: 0 10px;
-    margin-left: 10px;
     width: 60%;
 }
 .cart-container tbody{
@@ -506,18 +511,31 @@ background-color: var(--blue);
     width: calc(100%/6);
 }
 .cart-container div{
-    background-color: whitesmoke;
     border-radius: 5px;
-    display: inline;
-    margin-right: 10px;
+    background-color: whitesmoke;
+}
+.cartlist
+{
     width: 30%;
 }
+.cartlist li
+{
+    border-bottom: 1px solid var(--bblue);
+    margin-bottom: 15px;
+}
+.cartlist p
+{
+    white-space: nowrap;
+}
 .cart-container ol{
-    margin:10px;
-    height: 100%;
+    margin:15px !important;
 }
 .cart-container li{
     display:block;
+}
+.listsum{
+    margin-top: 100% !important;
+    margin-bottom: 0 !important;
 }
 .quantity-inp{
     padding:10px;
@@ -550,7 +568,7 @@ background-color: var(--blue);
 .admin-div{
     height:0px;
     transition:1s;
-    position: fixed;
+    position: absolute;
     bottom:0;
     background-color: var(--dblue);
     width: 100%;
@@ -603,7 +621,7 @@ width: 50%;
     cursor: pointer;
 }
 .closeadmin-btn{
-    position: fixed;
+    position: absolute;
     right:0;
     margin:2px;
 }
@@ -616,7 +634,7 @@ width: 50%;
     background-color: var(--blue);
 }
 .iteminfo{
-    position: fixed;
+    position: absolute;
     bottom:0;
     right: 0;
     margin:30px;
@@ -655,7 +673,7 @@ width: 50%;
 .backcurtain{
     background-color: black;
     opacity: .4;
-    position: fixed;
+    position: absolute;
     top:0;
     width: 100%;
     height: 100%;
