--- a/e-commerce/css/mystyle.css
+++ b/e-commerce/css/mystyle.css
@@ -412,8 +412,9 @@ animation-timing-function:ease-in-out ;
 
 .shop-div
 {
-width: 90%;
-height: 90%;
+  height: auto;
+  max-width: 90%;
+  min-width: 90%;
 display:flex;
 align-items: center;
 flex-direction: column;
@@ -424,8 +425,8 @@ justify-content: center;
 border:1px solid var(--blue);
 background-color: white;
 border-radius: 5px;
-width: 100%;
-height: 90%;
+height: auto;
+max-width: 90%;min-width: 90%;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -490,20 +491,20 @@ transition: .3s;
 background-color: var(--dblue);
 }
 .itempage{
-height: 90%;
-width: 90%;
+height: auto;
+max-width: 90%;min-width: 90%;
 }
 .itempage-container{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  height: auto;
+  max-width: 90%;min-width: 90%;
 }
 .item-img img
 {
-height: 200px;
-width: auto;
+  max-width: 50%;
+  height: auto;
 margin:10px;
 }
 .item-header
